--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
 
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="logo">
+                        <a class='logo__link' href="#">
+                            <img src="images/logo.png" alt="logo" class="logo__img">
+                        </a>
+                    </div>
+                    <div class="header__text">
+                        <a href="#">
+                            <span class="header__text--red"> Need help?</span>
+                        </a>
+                        Talk to an expert:
+                        <a class="header__phone" href="tel:61383766284">+61 3 8376 6284</a>
+                    </div>
+                    <div class="header__box">
+                        <a class="basket" href="#"></a>
+                        <a class="header__btn header__btn-login" href="#">Login</a>
+                        <a class="header__btn header__btn-register" href="#">Register</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    
+        <div class="header__menu">
+            <div class="container">
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="menu__item"> 
+                            <a class="menu__link" href="#">About</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">WordPress</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Joomla</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">PSD</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Plugins</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Components</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Pages</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Contact</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Help</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
+
+
+
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js"></script>
 </body>
+
 </html>
